--- a/On The Map/View/Base.lproj/Main.storyboard
+++ b/On The Map/View/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="ToU-29-88z">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="qEd-Z6-j7J">
     <device id="retina3_5" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15509"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15510"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -32,7 +32,7 @@
                     <navigationItem key="navigationItem" title="On The Map" id="KtA-4K-49w">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="L6l-Bm-o8q">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="WKf-SK-VQ1">
-                                <rect key="frame" x="16" y="10" width="92" height="30"/>
+                                <rect key="frame" x="16" y="7" width="92" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Logout"/>
                             </button>
@@ -56,7 +56,7 @@
                 <navigationController id="fDa-p8-hrC" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="" id="IjD-bA-Q9e" userLabel="Map"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="kVA-yh-RHX">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -85,7 +85,7 @@
                                         <rect key="frame" x="57" y="149.5" width="206" height="170.5"/>
                                         <subviews>
                                             <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="equalSpacing" spacing="5" id="FgJ-mI-l1a">
-                                                <rect key="frame" x="0.0" y="0.0" width="206" height="112"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="206" height="108"/>
                                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                 <subviews>
                                                     <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rIR-zB-vhQ">
@@ -99,28 +99,29 @@
                                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
-                                                    <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="LOG IN" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" id="Eyf-pb-dQX">
-                                                        <rect key="frame" x="0.0" y="78" width="206" height="34"/>
-                                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                                        <color key="backgroundColor" red="0.0" green="0.63529411759999999" blue="0.87843137250000003" alpha="1" colorSpace="calibratedRGB"/>
-                                                        <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                                        <textInputTraits key="textInputTraits"/>
-                                                    </textField>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hvW-DW-2IS">
+                                                        <rect key="frame" x="0.0" y="78" width="206" height="30"/>
+                                                        <color key="backgroundColor" red="0.0" green="0.63529411764705879" blue="0.8784313725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                        <state key="normal" title="LOGIN">
+                                                            <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                        </state>
+                                                        <connections>
+                                                            <action selector="loginPressed:" destination="qEd-Z6-j7J" eventType="touchUpInside" id="aNY-Iv-3sM"/>
+                                                        </connections>
+                                                    </button>
                                                 </subviews>
                                                 <constraints>
-                                                    <constraint firstItem="Eyf-pb-dQX" firstAttribute="height" secondItem="rIR-zB-vhQ" secondAttribute="height" id="jlu-GI-rb6"/>
                                                     <constraint firstItem="ICl-vG-AEK" firstAttribute="height" secondItem="rIR-zB-vhQ" secondAttribute="height" id="oY6-j4-af1"/>
                                                 </constraints>
                                                 <viewLayoutGuide key="safeArea" id="UFG-SP-UXQ"/>
                                             </stackView>
                                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Don't have an account? Sign Up" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3xE-HD-xSW">
-                                                <rect key="frame" x="0.0" y="132" width="206" height="18.5"/>
+                                                <rect key="frame" x="0.0" y="128" width="206" height="18.5"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                 <textInputTraits key="textInputTraits"/>
                                             </textField>
                                             <view contentMode="scaleAspectFill" translatesAutoresizingMaskIntoConstraints="NO" id="512-Ze-Std" userLabel="Spacer">
-                                                <rect key="frame" x="0.0" y="170.5" width="206" height="0.0"/>
+                                                <rect key="frame" x="0.0" y="166.5" width="206" height="4"/>
                                             </view>
                                         </subviews>
                                         <constraints>
@@ -143,6 +144,11 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ksh-ox-Hh5"/>
                     </view>
+                    <connections>
+                        <outlet property="emailTextField" destination="rIR-zB-vhQ" id="eDk-GT-cbC"/>
+                        <outlet property="loginButton" destination="hvW-DW-2IS" id="B9f-9T-Wx7"/>
+                        <outlet property="passwordTextField" destination="ICl-vG-AEK" id="yvJ-xv-mkK"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dWJ-dh-Lab" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -175,7 +181,7 @@
                     <navigationItem key="navigationItem" title="On The Map" id="Dph-pA-exU">
                         <barButtonItem key="leftBarButtonItem" style="plain" id="k8q-ec-uJ5">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="g1f-P1-CYf">
-                                <rect key="frame" x="16" y="10" width="92" height="30"/>
+                                <rect key="frame" x="16" y="7" width="92" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Logout"/>
                             </button>
@@ -196,7 +202,7 @@
                 <navigationController id="qcp-sJ-CSX" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="" id="vOp-gb-Ton"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="q8L-2D-Ao9">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
