--- a/On The Map/View/Base.lproj/Main.storyboard
+++ b/On The Map/View/Base.lproj/Main.storyboard
@@ -41,7 +41,13 @@
                             </button>
                         </barButtonItem>
                         <rightBarButtonItems>
-                            <barButtonItem image="icon_addpin" id="8ri-1g-y3C"/>
+                            <barButtonItem image="icon_addpin" id="8ri-1g-y3C">
+                                <connections>
+                                    <segue destination="OHW-GL-p9q" kind="popoverPresentation" popoverAnchorBarButtonItem="8ri-1g-y3C" id="c0U-qF-kV9">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem systemItem="refresh" id="exB-5L-c7C"/>
                         </rightBarButtonItems>
                     </navigationItem>
@@ -142,7 +148,6 @@
                             <constraint firstItem="6aM-Cf-iXn" firstAttribute="top" secondItem="ksh-ox-Hh5" secondAttribute="top" id="7FF-gz-lBT"/>
                             <constraint firstItem="ksh-ox-Hh5" firstAttribute="trailing" secondItem="6aM-Cf-iXn" secondAttribute="trailing" id="Gtx-aR-Hlo"/>
                             <constraint firstItem="6aM-Cf-iXn" firstAttribute="centerX" secondItem="afc-Q4-kEE" secondAttribute="centerX" id="oes-GP-UEP"/>
-                            <constraint firstItem="6aM-Cf-iXn" firstAttribute="top" secondItem="ksh-ox-Hh5" secondAttribute="top" id="tQA-Bu-0xX"/>
                             <constraint firstItem="6aM-Cf-iXn" firstAttribute="leading" secondItem="ksh-ox-Hh5" secondAttribute="leading" id="vVF-SV-bXh"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="ksh-ox-Hh5"/>
@@ -193,7 +198,13 @@
                             </connections>
                         </barButtonItem>
                         <rightBarButtonItems>
-                            <barButtonItem image="icon_addpin" id="8bE-lr-v5T"/>
+                            <barButtonItem image="icon_addpin" id="8bE-lr-v5T">
+                                <connections>
+                                    <segue destination="OHW-GL-p9q" kind="popoverPresentation" popoverAnchorBarButtonItem="8bE-lr-v5T" id="kx7-FC-A4A">
+                                        <popoverArrowDirection key="popoverArrowDirection" up="YES" down="YES" left="YES" right="YES"/>
+                                    </segue>
+                                </connections>
+                            </barButtonItem>
                             <barButtonItem systemItem="refresh" id="hUT-bH-0xx"/>
                         </rightBarButtonItems>
                     </navigationItem>
@@ -201,6 +212,83 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="tuT-7J-TOP" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="3308" y="416"/>
+        </scene>
+        <!--Add Location View Controller-->
+        <scene sceneID="KrB-FU-3UU">
+            <objects>
+                <viewController id="OHW-GL-p9q" customClass="AddLocationViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ndy-Hq-iyQ">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="460"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TLX-8e-LTF">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="56"/>
+                                <textAttributes key="titleTextAttributes">
+                                    <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="17"/>
+                                </textAttributes>
+                                <items>
+                                    <navigationItem title="Add Location" id="hDA-5x-P7w" userLabel="Add Location">
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="7ob-iK-6Md"/>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                            <stackView opaque="NO" contentMode="scaleAspectFit" axis="vertical" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="PGb-Fg-hct" userLabel="Container View">
+                                <rect key="frame" x="0.0" y="56" width="320" height="266.5"/>
+                                <subviews>
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="icon_world" translatesAutoresizingMaskIntoConstraints="NO" id="Gud-mz-oJl">
+                                        <rect key="frame" x="134" y="0.0" width="52" height="133.5"/>
+                                    </imageView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5Yw-iE-oIi">
+                                        <rect key="frame" x="60" y="133.5" width="200" height="133"/>
+                                        <subviews>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Location" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0az-B0-os5" userLabel="Location">
+                                                <rect key="frame" x="0.0" y="0.0" width="200" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Media URL" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k1n-LN-A0Q">
+                                                <rect key="frame" x="0.0" y="39" width="200" height="34"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                <textInputTraits key="textInputTraits"/>
+                                            </textField>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FVT-pT-D45" userLabel="ADD LOCATION">
+                                                <rect key="frame" x="0.0" y="78" width="200" height="30"/>
+                                                <color key="backgroundColor" red="0.0" green="0.63529411759999999" blue="0.87843137250000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="XOZ-sv-xmB"/>
+                                                </constraints>
+                                                <state key="normal" title="ADD LOCATION">
+                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                </state>
+                                            </button>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1nX-IE-3dJ">
+                                                <rect key="frame" x="0.0" y="113" width="200" height="20"/>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="PGb-Fg-hct" secondAttribute="height" multiplier="1.2:1" id="4CK-kO-Rzy"/>
+                                </constraints>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+                        <constraints>
+                            <constraint firstItem="PGb-Fg-hct" firstAttribute="top" secondItem="TLX-8e-LTF" secondAttribute="bottom" id="8oe-cT-hhv"/>
+                            <constraint firstItem="PGb-Fg-hct" firstAttribute="leading" secondItem="1T7-T4-5Of" secondAttribute="leading" id="Bas-U6-GJr"/>
+                            <constraint firstItem="TLX-8e-LTF" firstAttribute="top" secondItem="1T7-T4-5Of" secondAttribute="top" id="DCx-1a-lk7"/>
+                            <constraint firstItem="TLX-8e-LTF" firstAttribute="trailing" secondItem="PGb-Fg-hct" secondAttribute="trailing" id="FnY-80-8dO"/>
+                            <constraint firstItem="PGb-Fg-hct" firstAttribute="centerX" secondItem="ndy-Hq-iyQ" secondAttribute="centerX" id="JSo-gg-kUZ"/>
+                            <constraint firstItem="TLX-8e-LTF" firstAttribute="leading" secondItem="PGb-Fg-hct" secondAttribute="leading" id="XOz-vS-L4S"/>
+                            <constraint firstItem="1T7-T4-5Of" firstAttribute="trailing" secondItem="PGb-Fg-hct" secondAttribute="trailing" id="g1s-zg-FmM"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="1T7-T4-5Of"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aoT-TQ-KzH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="4370.625" y="87.5"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="mBd-mC-j2t">
@@ -243,6 +331,10 @@
         <image name="icon_addpin" width="24" height="24"/>
         <image name="icon_listview-selected" width="75" height="50"/>
         <image name="icon_mapview-selected" width="75" height="50"/>
+        <image name="icon_world" width="52" height="67"/>
         <image name="logo-u" width="62" height="62"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="kx7-FC-A4A"/>
+    </inferredMetricsTieBreakers>
 </document>
