changed API Protocol to comply to delete request as well, Had API Manager confomr to API Protocol, Updated Udacity Client logout function, Updated Parse API to confom to instance of API Manager, Updated Udacity Client and Parse Client to not contain constants, Updated naming for models and classes

--- a/On The Map/View/Base.lproj/Main.storyboard
+++ b/On The Map/View/Base.lproj/Main.storyboard
@@ -32,7 +32,7 @@
                     <navigationItem key="navigationItem" title="On The Map" id="KtA-4K-49w">
                         <barButtonItem key="leftBarButtonItem" id="L6l-Bm-o8q">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="WKf-SK-VQ1">
-                                <rect key="frame" x="16" y="10" width="92" height="30"/>
+                                <rect key="frame" x="16" y="7" width="92" height="30"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Logout"/>
                                 <connections>
@@ -153,7 +153,7 @@
                         <viewLayoutGuide key="safeArea" id="ksh-ox-Hh5"/>
                     </view>
                     <connections>
-                        <outlet property="emailTextField" destination="rIR-zB-vhQ" id="eDk-GT-cbC"/>
+                        <outlet property="emailTextField" destination="rIR-zB-vhQ" id="OZj-69-1Zc"/>
                         <outlet property="loginButton" destination="hvW-DW-2IS" id="B9f-9T-Wx7"/>
                         <outlet property="passwordTextField" destination="ICl-vG-AEK" id="yvJ-xv-mkK"/>
                     </connections>
