--- a/On The Map/View/Base.lproj/Main.storyboard
+++ b/On The Map/View/Base.lproj/Main.storyboard
@@ -169,6 +169,9 @@
                                                         <state key="normal">
                                                             <color key="titleColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                         </state>
+                                                        <connections>
+                                                            <action selector="loginWithGmail:" destination="qEd-Z6-j7J" eventType="touchUpInside" id="po3-QK-356"/>
+                                                        </connections>
                                                     </button>
                                                     <view contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="xgc-Ft-EMY">
                                                         <rect key="frame" x="0.0" y="78" width="220" height="34"/>
