--- a/On The Map/View/Base.lproj/Main.storyboard
+++ b/On The Map/View/Base.lproj/Main.storyboard
@@ -309,7 +309,7 @@
         <!--Add Location View Controller-->
         <scene sceneID="KrB-FU-3UU">
             <objects>
-                <viewController id="OHW-GL-p9q" customClass="AddLocationViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="AddLocationViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="OHW-GL-p9q" customClass="AddLocationViewController" customModule="On_The_Map" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ndy-Hq-iyQ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="548"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -353,6 +353,9 @@
                                                 <state key="normal" title="ADD LOCATION">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
+                                                <connections>
+                                                    <action selector="getCoordinate:" destination="OHW-GL-p9q" eventType="touchUpInside" id="UAI-Oo-zPq"/>
+                                                </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1nX-IE-3dJ">
                                                 <rect key="frame" x="0.0" y="113" width="200" height="20"/>
@@ -378,6 +381,10 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="1T7-T4-5Of"/>
                     </view>
+                    <connections>
+                        <outlet property="locationTextField" destination="0az-B0-os5" id="BkU-tJ-aHR"/>
+                        <outlet property="mediaURLTextfield" destination="k1n-LN-A0Q" id="3VR-2E-fN0"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="aoT-TQ-KzH" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
