--- a/On The Map/View/Base.lproj/Main.storyboard
+++ b/On The Map/View/Base.lproj/Main.storyboard
@@ -329,7 +329,11 @@
                                 </textAttributes>
                                 <items>
                                     <navigationItem title="Add Location" id="hDA-5x-P7w" userLabel="Add Location">
-                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="7ob-iK-6Md"/>
+                                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="7ob-iK-6Md">
+                                            <connections>
+                                                <action selector="cancelClicked:" destination="OHW-GL-p9q" id="6I0-FC-kLa"/>
+                                            </connections>
+                                        </barButtonItem>
                                     </navigationItem>
                                 </items>
                             </navigationBar>
@@ -358,11 +362,11 @@
                                                 <constraints>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="200" id="XOZ-sv-xmB"/>
                                                 </constraints>
-                                                <state key="normal" title="ADD LOCATION">
+                                                <state key="normal" title="Add Location">
                                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 </state>
                                                 <connections>
-                                                    <action selector="getCoordinate:" destination="OHW-GL-p9q" eventType="touchUpInside" id="UAI-Oo-zPq"/>
+                                                    <action selector="geocode:" destination="OHW-GL-p9q" eventType="touchUpInside" id="mbw-1H-waS"/>
                                                 </connections>
                                             </button>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1nX-IE-3dJ">
